# crewai

./: crew.ipynb  requirements.txt
crew_project/: README.md  pyproject.toml
crew_project/src/crew_project/: crew.py  main.py
