[tool.poetry]
name = "crew_project"
version = "0.1.0"
description = "crew_project using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
crew_project = "crew_project.main:run"
run_crew = "crew_project.main:run"
train = "crew_project.main:train"
replay = "crew_project.main:replay"
test = "crew_project.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
